frontend/src/assets/copystyle.css
html::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
html {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

/*
@media print {
    .pagebreak {
        clear: both;
        page-break-after: always;
    }
} */

body {
    background-color: #111111;
    color: lightgray;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Times New Roman', Times, serif;
}

header {
    background-color: #111111;
    padding-top: auto;
    box-sizing: border-box;
    top: 0;
    width: 100%;
    height: 50px;
}

main {
    padding-left: 50px;
    padding-right: 50px;
    flex: 1;
    box-sizing: border-box;
    width: 100%;
}

footer {
    background-color: #181818;
    padding-left: 50px;
    padding-right: 50px;
    padding-top: 20px;
    padding-bottom: 20px;
    font-size: 50%;
    box-sizing: border-box;
    text-align: right;
    bottom: 0;
    width: 100%;
    height: auto;
}

nav {
    text-align: right;
    size: 150%;
    padding-top: 10px;
}

.logo {
    float: left;
    padding-top: 5px;
    padding-left: 15px;
    max-width: 10%;
}

.pages {
    color: lightgray;
    margin-right: 20px;
    text-decoration: none;
}

.pages:hover {
    text-decoration: none;
}

.current_page {
    color: #F5D275;
    background-color: transparent;
    text-decoration: underline;
    text-underline-offset: 20px;
}

.current_page:hover {
    color: #F5D275;
    background-color: transparent;
    text-decoration: underline;
    text-underline-offset: 20px;
}

h1 {
    text-align: center;
    padding: 0px;
}

h2 {
    text-align: center;
    padding: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
    color: #BBBBBB;
}

.biglist {
    font-weight: bold;
    list-style-type: lower-roman;
    font-size: 150%;
}

.sublist {
    font-weight: normal;
    list-style-type: lower-alpha;
    font-size: 75%;
}

.subsublist {
    font-weight: normal;
    list-style-type: lower-roman;
    font-size: 100%;
}

li {
    padding-top: 1lh;
}

mark {
    color: #F5D275;
    text-decoration: none;
    background-color: transparent;
}

a {
    color: #F5D275;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.profile {
    border: 4px solid lightgray;
    border-radius: 25px 25px 25px 5px;
    object-fit: cover;
    width: 150px;
    height: 200px;
}

.profile:hover {
    border: 4px solid #F5D275;
}

.profiles {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

figure {
    margin: 20px;
    text-align: center;
}

.letters {
    color: lightgray;
    text-decoration: none;
}

table.entry {
    margin-top: 20px;
}
table.entry td {
    text-align: left;
    vertical-align: top;
}

table.entry p {
    margin-top: 0px;
    margin-left: 40px;
    margin-right: 40px;
}

table.entry ul {
    list-style-type: none;
    margin-left: 40px;
    margin-right: 40px;
    margin-top: 0px;
    margin-bottom: 2lh;
}

td.term {
    width: 200px;
}

.search {
    text-align: center;
    margin: 40px;
}

.search input[type=text] {
    padding: 13px 80px 13px 20px;
    border: none;
    font-size: 17px;
    font-family: 'Times New Roman', Times, serif;
}

.search select {
    padding: 13px 16px 13px 16px;
    margin: 0px;
    background: #ddd;
    font-size: 17px;
    font-family: 'Times New Roman', Times, serif;
    color: #111111;
    border: none;
    border-right: 16px solid transparent;
    cursor: pointer;   
  }
  
.search select:hover, .search .check:hover {
    background: #ccc;
  }

.search option {
    background-color: white;
    /* color: #757575; */
}

.search option:hover {
    background-color: lightgray;
    border-radius: 0px;
    margin-top: 0px;
}

.highlight {
    background-color: #F5D275;
    border-radius: 5px;
    color: black;
}

.search input[type=checkbox] {
    visibility: hidden;
    position: absolute;
  }

.search .check {
    display: inline;
    padding: 13px 16px 13px 16px;
    background: #ddd;
    font-size: 17px;
    font-family: 'Times New Roman', Times, serif;
    color: #111111;
    border: none;
    cursor: pointer;
    position: relative;
}

.search .check label {
    color: #757575;
    padding: 13px 16px;
    margin: -13px -16px -13px -16px;
    /* transition: all .5s ease; */
    cursor: pointer;
    width: 100%;
}

.search .check input[type=checkbox]:checked + label {
    color: black;
}

